Alterando regra para não aceitar getters/setters static, private e protected e para não aceitar campos estáticos.